Fix vertical alignment for feed icons.

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -717,11 +717,14 @@ display:none;
 
 #export_data li {
     list-style-type:none;
-    line-height: 2.5;
 }
 
 #export_data li a {
+    display: block;
     padding-left: 30px;
+    height: 16px;
+    line-height: 16px;
+    margin-bottom: 15px;
 }
 
 #aside_primary td {
